mejoras de identacion y comentarios

--- a/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
@@ -4,23 +4,26 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html">
 
-<h:head></h:head>
-<body>
-	<ui:composition template="/resources/plantilla/plantilla.xhtml">
-		<ui:define name="content">
-			<div class="">
-				<ui:repeat var="conciliador"
-					value="#{controllerConciliador.listaConciliador()}">
-					<div class="col-md-4 col-sm-6 col-xs-12">
-						<div class="box box-primary">
-							<div class="box-header with-border">
-								<i> <h:outputLabel value="#{conciliador.getApellido()}" />
-									<label> </label>
-									<h:outputLabel value=" #{conciliador.getNombre()} " />
-								</i> <small class="label pull-right label-primary">#{conciliador.getId()}</small>
-							</div>
-							<div class='box-body'>
-								<div class="left col-xs-8">
+	<h:head>
+	</h:head>
+	
+	<body>
+		<ui:composition template="/resources/plantilla/plantilla.xhtml">
+			<ui:define name="content">
+				<div class="">
+					<ui:repeat var="conciliador" value="#{controllerConciliador.listaConciliador()}">
+						<div class="col-md-4 col-sm-6 col-xs-12">
+							<div class="box box-primary">
+								<div class="box-header with-border">
+									<i>
+										<h:outputLabel value="#{conciliador.getApellido()}" />
+										<label> </label>
+										<h:outputLabel value=" #{conciliador.getNombre()} " />
+									</i> 
+									<small class="label pull-right label-primary">#{conciliador.getId()}</small>
+								</div>
+								<div class='box-body'>
+									<div class="left col-xs-8">
 										<h:outputLabel value="Especialidad:" />
 										#{conciliador.getEspecialidad()}
 										<br />
@@ -28,28 +31,25 @@
 										#{conciliador.getExperiencia()}
 										<br />
 										<h:outputLabel value=" Universidad de los Llanos" />
-								</div>
-								<div class="right col-xs-4 text-center">
-									<img
-										src="http://localhost:8080/Madiba/resources/img/png/#{conciliador.getFoto()}"
-										alt="" class="img-circle img-responsive" />
-								</div>
-								<div class="left col-xs-12">
-									<i class="fa fa-phone"></i>
-									<h:outputLabel value=" Telefono:" />
-									#{conciliador.getTelefono()}
-									<br />
-									<i class="fa fa-envelope"></i>
-									<h:outputLabel value=" Email:" />
-									#{conciliador.getEmail()}
+									</div>
+									<div class="right col-xs-4 text-center">
+										<img src="http://localhost:8080/Madiba/resources/img/png/#{conciliador.getFoto()}" alt="" class="img-circle img-responsive" />
+									</div>
+									<div class="left col-xs-12">
+										<i class="fa fa-phone" />
+										<h:outputLabel value=" Telefono:" />
+										#{conciliador.getTelefono()}
+										<br />
+										<i class="fa fa-envelope" />
+										<h:outputLabel value=" Email:" />
+										#{conciliador.getEmail()}
+									</div>
 								</div>
 							</div>
-							
 						</div>
-					</div>
-				</ui:repeat>
-			</div>
-		</ui:define>
-	</ui:composition>
-</body>
+					</ui:repeat>
+				</div>
+			</ui:define>
+		</ui:composition>
+	</body>
 </html>
