--- a/src/main/webapp/resources/secciones/header.xhtml
+++ b/src/main/webapp/resources/secciones/header.xhtml
@@ -8,19 +8,22 @@
 <body>
 	<ui:composition>
 		<a href="/Madiba" class="logo"> <!-- mini logo for sidebar mini 50x50 pixels -->
-			<span class="logo-mini"><b>A</b>LT</span> <!-- logo for regular state and mobile devices -->
+			<span class="logo-mini"><b>C</b>on.</span> <!-- logo for regular state and mobile devices -->
 			<span class="logo-lg"><b>Conalbos</b></span>
 		</a>
 
 		<div class="navbar navbar-static-top">
+			<a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+	        	<span class="sr-only">Toggle navigation</span>
+	      	</a>
 			<div class="navbar-custom-menu">
 				<ul class="nav navbar-nav">
-					<li class="dropdown user user-menu"><a href="#"
-						class="dropdown-toggle"> 
-						<h:graphicImage library="img/png" name="girl.png" class="user-image" alt="User Image" />
-						
+					<li class="dropdown user user-menu">
+						<a href="#"	class="dropdown-toggle"> 
+							<h:graphicImage library="img/png" name="girl.png" class="user-image" alt="User Image" />
 							<span class="hidden-xs">Jenny Marcela</span>
-					</a></li>
+						</a>
+					</li>
 				</ul>
 			</div>
 		</div>
