--- a/src/main/webapp/resources/plantilla/plantilla.xhtml
+++ b/src/main/webapp/resources/plantilla/plantilla.xhtml
@@ -14,28 +14,29 @@
 </h:head>
 
 <h:body class='skin-blue sidebar-mini wysihtml5-supported'>
-
-	<div class='main-header'>
-		<ui:insert name="header">
-			<ui:include src="/resources/secciones/header.xhtml" />
-		</ui:insert>
+	<div class='wrapper'>
+		<div class='main-header'>
+			<ui:insert name="header">
+				<ui:include src="/resources/secciones/header.xhtml" />
+			</ui:insert>
+		</div>
+		<div class='main-sidebar'>
+			<ui:insert name="sidebar">
+				<ui:include src="/resources/secciones/sidebar.xhtml" />
+			</ui:insert>
+		</div>
+		<div class='content-wrapper'>
+			
+			<ui:insert name="content">
+				<ui:include src="/resources/secciones/content.xhtml" />
+			</ui:insert>
+		</div>
+		<!-- <div class='main-footer'>
+			<ui:insert name="footer">
+				<ui:include src="/resources/secciones/footer.xhtml" />
+			</ui:insert>
+		</div> -->
 	</div>
-	<div class='main-sidebar'>
-		<ui:insert name="sidebar">
-			<ui:include src="/resources/secciones/sidebar.xhtml" />
-		</ui:insert>
-	</div>
-	<div class='content-wrapper' style='height: 537px;padding-top: 20px;overflow: scroll;'>
-		
-		<ui:insert name="content">
-			<ui:include src="/resources/secciones/content.xhtml" />
-		</ui:insert>
-	</div>
-	<!-- <div class='main-footer'>
-		<ui:insert name="footer">
-			<ui:include src="/resources/secciones/footer.xhtml" />
-		</ui:insert>
-	</div> -->
 	<h:outputScript library="js" name="jquery-2.2.3.min.js" />
 	<h:outputScript library="js" name="bootstrap.js" />
 	<h:outputScript library="js" name="app.js" />
