--- a/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
+++ b/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
@@ -4,265 +4,92 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html">
 
-	<h:head>
-	</h:head>
-	
-	<body>
-		<ui:composition template="/resources/plantilla/plantilla.xhtml">
-			<ui:define name="content">
-				<div class="content">
-					<div class="row">		
-						<div class="col-md-12">
-				          	<div class="nav-tabs-custom">
-				            	<ul class="nav nav-tabs">
-				              		<li class="active">
-				              			<a href="#todas" data-toggle="tab">Todas</a>
-				              		</li>
-				              		<li>
-				              			<a href="#liquidar" data-toggle="tab">Por Liquidar</a>
-				              		</li>
-				              		<li>
-				              			<a href="#radicar" data-toggle="tab">Por Radicar</a>
-				              		</li>
-				              		<li>
-				              			<a href="#audiencia" data-toggle="tab">Para Audiencia</a>
-				              		</li>
-				              		<li>
-				              			<a href="#registro" data-toggle="tab">Por Registrar</a>
-				              		</li>
-				            	</ul>
-				            	<div class="tab-content">
-				              		<div class="active tab-pane" id="todas">
-										<div class="row">
-											<ui:repeat var="solicitud" value="#{controllerSolicitud.listaSolicitud}">
-												<div class="col-md-6 col-sm-6 col-xs-12" style="">
-													<div class="box box-primary" style="height: 150px;box-shadow: 2px 2px 5px #999;">
-														<h:form>
-															<div class="box-header with-border">
-																<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
-																<i> 
-																	<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
-																</i>
-																<h:commandButton class="pull-right btn btn-primary btn-sm" value="#{solicitud.estado}" action="#{controllerConciliador.solicitado('3212780399')}"/>
-															</div>
-														</h:form>
-														<div class='box-body'>
-															<div class="col-xs-6">
-																<h:outputLabel value="Fecha:" />
-																#{solicitud.fecha}
-																<br/>
-																<h:outputLabel value="Convocante:" />
-																<ui:repeat var="convotante" value="#{solicitud.convotante}">
-																	 #{convotante}
-																	 <label> </label>
-																</ui:repeat>
-															</div>
-															<div class="col-xs-6">
-																<h:outputLabel value="Conciliador:" />
-																#{controllerConciliador.buscarConciliador(solicitud.conciliador)}
-																<br/>
-																<h:outputLabel value="Convocado:" />
-																<ui:repeat var="convocado" value="#{solicitud.convocado}">
-																	 #{convocado}
-																	 <label> </label>
-																</ui:repeat>
-															</div>
-															<div class="col-xs-12">
-																<h:outputLabel value="Descripción:" />
-																#{solicitud.descripcion}
-															</div>
-														</div>
-													</div>
-												</div>
-											</ui:repeat>
-				              			</div>
-				              		</div>
-				              		<div class="tab-pane" id="liquidar">
-				              			<div class="row">
-											<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Liquidar')}">
-												<div class="col-md-6 col-sm-6 col-xs-12" style="">
-													<div class="box box-primary" style="height: 150px;box-shadow: 2px 2px 5px #999;">
-														<h:form>
-															<div class="box-header with-border">
-																<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
-																<i> 
-																	<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
-																</i>
-																<h:commandButton class="pull-right btn btn-primary btn-sm" value="#{solicitud.estado}" action="#{controllerConciliador.solicitado('3212780399')}"/>
-															</div>
-														</h:form>
-														<div class='box-body'>
-															<div class="col-xs-6">
-																<h:outputLabel value="Fecha:" />
-																#{solicitud.fecha}
-																<br/>
-																<h:outputLabel value="Convocante:" />
-																<ui:repeat var="convotante" value="#{solicitud.convotante}">
-																	 #{convotante}
-																	 <label> </label>
-																</ui:repeat>
-															</div>
-															<div class="col-xs-6">
-																<h:outputLabel value="Conciliador:" />
-																#{controllerConciliador.buscarConciliador(solicitud.conciliador)}
-																<br/>
-																<h:outputLabel value="Convocado:" />
-																<ui:repeat var="convocado" value="#{solicitud.convocado}">
-																	 #{convocado}
-																	 <label> </label>
-																</ui:repeat>
-															</div>
-															<div class="col-xs-12">
-																<h:outputLabel value="Descripción:" />
-																#{solicitud.descripcion}
-															</div>
-														</div>
-													</div>
-												</div>
-											</ui:repeat>
-										</div>
-				              		</div>
-				                	<div class="tab-pane" id="radicar">
-										<div class="row">
-											<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Radicar')}">
-												<div class="col-md-6 col-sm-6 col-xs-12" style="">
-													<div class="box box-warning" style="height: 150px;box-shadow: 2px 2px 5px #999;">
-														<h:form>
-															<div class="box-header with-border">
-																<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
-																<i> 
-																	<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
-																</i>
-																<h:commandButton class="pull-right btn btn-warning btn-sm" value="#{solicitud.estado}" action="#{controllerConciliador.designarConciliador(solicitud.conciliador,solicitud.id,'Audiencia')}"/>
-															</div>
-														</h:form>
-														<div class='box-body'>
-															<div class="col-xs-6">
-																<h:outputLabel value="Fecha:" />
-																#{solicitud.fecha}
-																<br/>
-																<h:outputLabel value="Convocante:" />
-																<ui:repeat var="convotante" value="#{solicitud.convotante}">
-																	 #{convotante}
-																	 <label> </label>
-																</ui:repeat>
-															</div>
-															<div class="col-xs-6">
-																<h:outputLabel value="Conciliador:" />
-																#{controllerConciliador.buscarConciliador(solicitud.conciliador)}
-																<br/>
-																<h:outputLabel value="Convocado:" />
-																<ui:repeat var="convocado" value="#{solicitud.convocado}">
-																	 #{convocado}
-																	 <label> </label>
-																</ui:repeat>
-															</div>
-															<div class="col-xs-12">
-																<h:outputLabel value="Descripción:" />
-																#{solicitud.descripcion}
-															</div>
-														</div>
-													</div>
-												</div>
-											</ui:repeat>
-										</div>
-				              		</div>
-			              			<div class="tab-pane" id="audiencia">
-			              				<div class="row">
-				              				<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Audiencia')}">
-												<div class="col-md-6 col-sm-6 col-xs-12" style="">
-													<div class="box box-success" style="height: 150px;box-shadow: 2px 2px 5px #999;">
-														<h:form>
-															<div class="box-header with-border">
-																<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
-																<i> 
-																	<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
-																</i>
-																<h:commandButton class="pull-right btn btn-success btn-sm" value="#{solicitud.estado}" action="#{controllerConciliador.solicitado('3212780399')}"/>
-															</div>
-														</h:form>
-														<div class='box-body'>
-															<div class="col-xs-6">
-																<h:outputLabel value="Fecha:" />
-																#{solicitud.fecha}
-																<br/>
-																<h:outputLabel value="Convocante:" />
-																<ui:repeat var="convotante" value="#{solicitud.convotante}">
-																	 #{convotante}
-																	 <label> </label>
-																</ui:repeat>
-															</div>
-															<div class="col-xs-6">
-																<h:outputLabel value="Conciliador:" />
-																#{controllerConciliador.buscarConciliador(solicitud.conciliador)}
-																<br/>
-																<h:outputLabel value="Convocado:" />
-																<ui:repeat var="convocado" value="#{solicitud.convocado}">
-																	 #{convocado}
-																	 <label> </label>
-																</ui:repeat>
-															</div>
-															<div class="col-xs-12">
-																<h:outputLabel value="Descripción:" />
-																#{solicitud.descripcion}
-															</div>
-														</div>
-													</div>
-												</div>
-											</ui:repeat>
-										</div>
-			              			</div>
-			              			<div class="tab-pane" id="registro">
-			              				<div class="row">
-				              				<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Registro')}">
-												<div class="col-md-6 col-sm-6 col-xs-12" style="">
-													<div class="box box-success" style="height: 150px;box-shadow: 2px 2px 5px #999;">
-														<h:form>
-															<div class="box-header with-border">
-																<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
-																<i> 
-																	<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
-																</i>
-																<h:commandButton class="pull-right btn btn-success btn-sm" value="#{solicitud.estado}" action="#{controllerConciliador.solicitado('3212780399')}"/>
-															</div>
-														</h:form>
-														<div class='box-body'>
-															<div class="col-xs-6">
-																<h:outputLabel value="Fecha:" />
-																#{solicitud.fecha}
-																<br/>
-																<h:outputLabel value="Convocante:" />
-																<ui:repeat var="convotante" value="#{solicitud.convotante}">
-																	 #{convotante}
-																	 <label> </label>
-																</ui:repeat>
-															</div>
-															<div class="col-xs-6">
-																<h:outputLabel value="Conciliador:" />
-																#{controllerConciliador.buscarConciliador(solicitud.conciliador)}
-																<br/>
-																<h:outputLabel value="Convocado:" />
-																<ui:repeat var="convocado" value="#{solicitud.convocado}">
-																	 #{convocado}
-																	 <label> </label>
-																</ui:repeat>
-															</div>
-															<div class="col-xs-12">
-																<h:outputLabel value="Descripción:" />
-																#{solicitud.descripcion}
-															</div>
-														</div>
-													</div>
-												</div>
-											</ui:repeat>
-										</div>
-			              			</div>
-				            	</div>
-				          	</div>
-				       	</div>
+<h:head>
+</h:head>
+
+<body>
+	<ui:composition template="/resources/plantilla/plantilla.xhtml">
+		<ui:define name="content">
+			<div class="content">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="nav-tabs-custom">
+							<ul class="nav nav-tabs">
+								<li class="active">
+									<a href="#todas" data-toggle="tab">Todas</a>
+								</li>
+								<li>
+									<a href="#liquidar" data-toggle="tab">Por Liquidar</a>
+								</li>
+								<li>	
+									<a href="#radicar" data-toggle="tab">Por Radicar</a>
+								</li>
+								<li>
+									<a href="#audiencia" data-toggle="tab">Para Audiencia</a>
+								</li>
+								<li>
+									<a href="#registro" data-toggle="tab">Por Registrar</a>
+								</li>
+							</ul>
+							<div class="tab-content">
+								<div class="tab-pane active" id="todas">
+									<div class="row">
+										<ui:repeat var="solicitud" value="#{controllerSolicitud.listaSolicitud}">
+											<h:form>
+												<ui:include src="fichasolicitud.xhtml">
+													<ui:param name="boxColor" value="box box-primary" />
+													<ui:param name="botonColor"	value="pull-right btn btn-primary btn-sm" />
+												</ui:include>
+											</h:form>
+										</ui:repeat>
+									</div>
+								</div>
+								<div class="tab-pane" id="liquidar">
+									<div class="row">
+										<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Liquidar')}">
+											<ui:include src="fichasolicitud.xhtml">
+												<ui:param name="boxColor" value="box box-warning" />
+												<ui:param name="botonColor" value="pull-right btn btn-warning btn-sm" />
+											</ui:include>
+										</ui:repeat>
+									</div>
+								</div>
+								<div class="tab-pane" id="radicar">
+									<div class="row">
+										<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Radicar')}">
+											<ui:include src="fichasolicitud.xhtml">
+												<ui:param name="boxColor" value="box box-info" />
+												<ui:param name="botonColor" value="pull-right btn btn-info btn-sm" />
+											</ui:include>
+										</ui:repeat>
+									</div>
+								</div>
+								<div class="tab-pane" id="audiencia">
+									<div class="row">
+										<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Audiencia')}">
+											<ui:include src="fichasolicitud.xhtml">
+												<ui:param name="boxColor" value="box box-success" />
+												<ui:param name="botonColor" value="pull-right btn btn-success btn-sm" />
+											</ui:include>
+										</ui:repeat>
+									</div>
+								</div>
+								<div class="tab-pane" id="registro">
+									<div class="row">
+										<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Registrar')}">
+											<ui:include src="fichasolicitud.xhtml">
+												<ui:param name="boxColor" value="box box-danger" />
+												<ui:param name="botonColor" value="pull-right btn btn-danger btn-sm" />
+											</ui:include>
+										</ui:repeat>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-			</ui:define>
-		</ui:composition>
-	</body>
+			</div>
+		</ui:define>
+	</ui:composition>
+</body>
 </html>
