--- a/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
@@ -7,8 +7,8 @@
 <h:head></h:head>
 <body>
 	<ui:composition>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-			<div class="#{boxColor}">
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" >
+			<div class="#{boxColor}" style="box-shadow: 2px 2px 5px #999;">
 				<div class="box-header with-border">
 					<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
 					<i> 
@@ -41,10 +41,10 @@
 								 <label> </label>
 							</ui:repeat>
 						</div>
-					</div>
-					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<h:outputLabel value="Descripción:" />
-						#{solicitud.descripcion}
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<h:outputLabel value="Descripción:" />
+							#{solicitud.descripcion}
+						</div>
 					</div>
 				</div>
 			</div>
