scroll arreglado, barra superior fija..

--- a/src/main/webapp/resources/plantilla/plantilla.xhtml
+++ b/src/main/webapp/resources/plantilla/plantilla.xhtml
@@ -25,7 +25,7 @@
 				<ui:include src="/resources/secciones/sidebar.xhtml" />
 			</ui:insert>
 		</div>
-		<div class='content-wrapper'>
+		<div class='content-wrapper' style='height: 537px;padding-top: 20px;overflow: scroll;'>
 			
 			<ui:insert name="content">
 				<ui:include src="/resources/secciones/content.xhtml" />
