--- a/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
@@ -7,17 +7,17 @@
 <h:head></h:head>
 <body>
 	<ui:composition>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" >
-			<div class="#{boxColor}" style="box-shadow: 2px 2px 5px #999;">
+		<h:form>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			<div class="box #{controllerSolicitud.colorFicha(solicitud.id,'box')}" style="box-shadow: 2px 2px 5px #999;">
 				<div class="box-header with-border">
 					<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
 					<i> 
 						<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
 					</i>
-					<h:commandButton class="#{botonColor}" value="#{solicitud.estado}">
-						<f:ajax render="@all" listener="#{controllerSolicitud.solicitud(this, solicitud.id)}"/>
+					<h:commandButton class="pull-right btn btn-sm #{controllerSolicitud.colorFicha(solicitud.id,'btn')}" 
+					value="#{solicitud.estado}" action="#{controllerSolicitud.cambiarEstado(solicitud.id)}" >
 					</h:commandButton>
-					
 				</div>
 				<div class='box-body'>
 					<div class="row">
@@ -49,6 +49,7 @@
 				</div>
 			</div>
 		</div>
+		</h:form>
 	</ui:composition>
 </body>
 </html>
