--- a/src/main/webapp/resources/secciones/content.xhtml
+++ b/src/main/webapp/resources/secciones/content.xhtml
@@ -4,26 +4,23 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html">
 
-<h:head></h:head>
-<body>
-
-	<ui:composition>
-		<div class="content-header">
-			<h1>
-				Page Header <small>Optional description</small>
-			</h1>
-			<ol class="breadcrumb">
-				
-				<li><a href="#"><i class="fa fa-dashboard"></i> Level </a></li>
-				<li class="active">Here</li>
-			</ol>
-		</div>
-
-		<div class="content">
-
-			<p>Contenido</p>
-
-		</div>
-	</ui:composition>
-</body>
+	<h:head>
+	</h:head>
+	
+	<body>
+		<ui:composition>
+			<div class="content-header">
+				<h1>
+					Page Header <small>Optional description</small>
+				</h1>
+				<ol class="breadcrumb">
+					<li><a href="#"><i class="fa fa-dashboard"></i> Level </a></li>
+					<li class="active">Here</li>
+				</ol>
+			</div>
+			<div class="content">
+				<p>Contenido</p>
+			</div>
+		</ui:composition>
+	</body>
 </html>
