--- a/src/main/webapp/modulos/listapruebas.xhtml
+++ b/src/main/webapp/modulos/listapruebas.xhtml
@@ -33,39 +33,59 @@
 							</ul>
 							<div class="tab-content">
 								<div class="tab-pane active" id="todas">
-									<h:panelGroup class="row" id="panelTodas">
-										<ui:repeat var="solicitud" value="#{controllerPruebas.listaSolicitud}">
-											<ui:include src="pruebas.xhtml" />
-										</ui:repeat>
-									</h:panelGroup>
+									<h:form id='formtodas'>
+										<h:panelGroup class="row" id="panelTodas">
+											<ui:repeat var="solicitud" value="#{controllerPruebas.listaSolicitud}">
+												<ui:include src="pruebas.xhtml"  >
+													<ui:param name="formulacio" value=":formliquidar:panelLiquidar" />
+												</ui:include>
+											</ui:repeat>
+										</h:panelGroup>
+									</h:form>
 								</div>
 								<div class="tab-pane" id="liquidar">
-									<h:panelGroup class="row" id="panelLiquidar">
-										<ui:repeat var="solicitud" value="#{controllerPruebas.solicitudesPorEstado('Liquidar')}">
-											<ui:include src="pruebas.xhtml" />
-										</ui:repeat>
-									</h:panelGroup>
+									<h:form id='formliquidar'>
+										<h:panelGroup class="row" id="panelLiquidar">
+											<ui:repeat var="solicitud" value="#{controllerPruebas.solicitudesPorEstado('Liquidar')}">
+												<ui:include src="pruebas.xhtml" >
+													<ui:param name="formulacio" value="" />
+												</ui:include>
+											</ui:repeat>
+										</h:panelGroup>
+									</h:form>
 								</div>
 								<div class="tab-pane" id="radicar">
-									<h:panelGroup class="row" id="panelRadicar">
-										<ui:repeat var="solicitud" value="#{controllerPruebas.solicitudesPorEstado('Radicar')}">
-											<ui:include src="pruebas.xhtml" />
-										</ui:repeat>
-									</h:panelGroup>
+									<h:form id='formradicar'>
+										<h:panelGroup class="row" id="panelRadicar">
+											<ui:repeat var="solicitud" value="#{controllerPruebas.solicitudesPorEstado('Radicar')}">
+												<ui:include src="pruebas.xhtml" >
+													<ui:param name="formulacio" value="" />
+												</ui:include>
+											</ui:repeat>
+										</h:panelGroup>
+									</h:form>
 								</div>
 								<div class="tab-pane" id="audiencia">
-									<h:panelGroup class="row" id="panelAudiencia">
-										<ui:repeat var="solicitud" value="#{controllerPruebas.solicitudesPorEstado('Audiencia')}">
-											<ui:include src="pruebas.xhtml" />
-										</ui:repeat>
-									</h:panelGroup>
+									<h:form id='formaudiencia'>
+										<h:panelGroup class="row" id="panelAudiencia">
+											<ui:repeat var="solicitud" value="#{controllerPruebas.solicitudesPorEstado('Audiencia')}">
+												<ui:include src="pruebas.xhtml" >
+													<ui:param name="formulacio" value="" />
+												</ui:include>
+											</ui:repeat>
+										</h:panelGroup>
+									</h:form>
 								</div>
 								<div class="tab-pane" id="registrar">
-									<h:panelGroup class="row" id="panelRegistrar">
-										<ui:repeat var="solicitud" value="#{controllerPruebas.solicitudesPorEstado('Registrar')}">
-											<ui:include src="pruebas.xhtml" />
-										</ui:repeat>
-									</h:panelGroup>
+									<h:form id='formregistrar'>
+										<h:panelGroup class="row" id="panelRegistrar">
+											<ui:repeat var="solicitud" value="#{controllerPruebas.solicitudesPorEstado('Registrar')}">
+												<ui:include src="pruebas.xhtml" >
+													<ui:param name="formulacio" value="" />
+												</ui:include>
+											</ui:repeat>
+										</h:panelGroup>
+									</h:form>
 								</div>
 							</div>
 						</div>
