--- a/src/main/webapp/modulos/pruebas.xhtml
+++ b/src/main/webapp/modulos/pruebas.xhtml
@@ -7,7 +7,6 @@
 <h:head></h:head>
 <body>
 	<ui:composition>
-		<h:form>
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 			<div class="box #{controllerPruebas.colorFicha(solicitud.id,'box')}" style="box-shadow: 2px 2px 5px #999;">
 				<div class="box-header with-border">
@@ -16,7 +15,7 @@
 						<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
 					</i>
 					<h:commandButton class="pull-right btn btn-sm #{controllerPruebas.colorFicha(solicitud.id,'btn')}" value="#{solicitud.estado}">
-						<f:ajax render=":panelTodas :panelLiquidar :panelRadicar :panelAudiencia :panelRegistrar" listener="#{controllerPruebas.cambiarEstado(this, solicitud.id)}"/>
+						<f:ajax render="#{formulacio}" listener="#{controllerPruebas.cambiarEstado(this, solicitud.id)}"/>
 					</h:commandButton>
 				</div>
 				<div class='box-body'>
@@ -49,7 +48,6 @@
 				</div>
 			</div>
 		</div>
-		</h:form>
 	</ui:composition>
 </body>
 </html>
