--- a/src/main/webapp/modulos/pruebas.xhtml
+++ b/src/main/webapp/modulos/pruebas.xhtml
@@ -22,27 +22,30 @@
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 							<h:outputLabel value="Fecha:" />
-							#{solicitud.fecha}
+							<h:outputText value=" #{solicitud.fecha}" />
 							<br/>
-							<h:outputLabel value="Convocante:" />
-							<ui:repeat var="convotante" value="#{solicitud.convotante}">
-								 #{convotante}
-								 <label> </label>
-							</ui:repeat>
+							<h:outputLabel value="Convocantes:" />
+							<ul>
+								<ui:repeat var="convotante" value="#{solicitud.convotante}">
+									<li>#{convotante}</li> 
+									
+								</ui:repeat>
+							</ul>
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 							<h:outputLabel value="Conciliador:" />
-							#{controllerConciliador.buscarConciliador(solicitud.conciliador)}
+							<h:outputText value=" #{controllerConciliador.buscarConciliador(solicitud.conciliador)}" />
 							<br/>
-							<h:outputLabel value="Convocado:" />
-							<ui:repeat var="convocado" value="#{solicitud.convocado}">
-								 #{convocado}
-								 <label> </label>
-							</ui:repeat>
+							<h:outputLabel value="Convocados:" />
+							<ul>
+								<ui:repeat var="convocado" value="#{solicitud.convocado}">
+									 <li>#{convocado}</li>
+								</ui:repeat>
+							</ul>
 						</div>
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h:outputLabel value="Descripción:" />
-							#{solicitud.descripcion}
+							<h:outputText value=" #{solicitud.descripcion}" />
 						</div>
 					</div>
 				</div>
