Funcionando pero con error al poner cualquier palabra con tildes en lista solicitudes...

--- a/src/main/webapp/resources/plantilla/plantilla.xhtml
+++ b/src/main/webapp/resources/plantilla/plantilla.xhtml
@@ -25,7 +25,7 @@
 				<ui:include src="/resources/secciones/sidebar.xhtml" />
 			</ui:insert>
 		</div>
-		<div class='content-wrapper' style="height:100%;overflow:auto">
+		<div class='content-wrapper' style="height:10px;overflow:auto">
 			<ui:insert name="content">
 				<ui:include src="/resources/secciones/content.xhtml" />
 			</ui:insert>
