Header Barra de Busqueda  Vita

--- a/src/main/webapp/resources/secciones/header.xhtml
+++ b/src/main/webapp/resources/secciones/header.xhtml
@@ -18,6 +18,18 @@
 	      	</a>
 			<div class="navbar-custom-menu">
 				<ul class="nav navbar-nav">
+					<li class='dropdown'>
+			           	<h:form style="width: 162px;" class="sidebar-form">
+				           	<h:panelGroup class="input-group">
+			           			<h:inputText value="Buscar.." class="form-control" />
+			           			<span class="input-group-btn">
+			                      <button type="submit" name="search" id="search-btn" class="btn btn-flat">
+			                      	<i class="fa fa-search"></i>
+			                      </button>
+			                    </span>
+				           	</h:panelGroup>
+			           	</h:form>
+			        </li>
 					<li class="dropdown user user-menu">
 						<a href="#"	class="dropdown-toggle"> 
 							<h:graphicImage library="img/png" name="girl.png" class="user-image" alt="User Image" />
