--- a/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
@@ -7,7 +7,7 @@
 <h:head></h:head>
 <body>
 	<ui:composition>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="height: 100%">
 			<div class="box #{controllerSolicitud.colorFicha(solicitud.id,'box')}" style="box-shadow: 2px 2px 5px #999;">
 				<div class="box-header with-border">
 					<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
@@ -27,7 +27,7 @@
 							<h:outputLabel value="Convocantes:" />
 							<ul>
 								<ui:repeat var="convotante" value="#{solicitud.convotante}">
-									<li>#{convotante}</li> 
+									<li><h:outputText value="#{convotante}" /></li> 
 								</ui:repeat>
 							</ul>
 						</div>
@@ -38,7 +38,7 @@
 							<h:outputLabel value="Convocados:" />
 							<ul>
 								<ui:repeat var="convocado" value="#{solicitud.convocado}">
-									 <li>#{convocado}</li>
+									<li><h:outputText value="#{convocado}" /></li>
 								</ui:repeat>
 							</ul>
 						</div>
